--- a/source/catalog.html
+++ b/source/catalog.html
@@ -15,7 +15,7 @@
         <img class="page-header__logo-image-name" src="img/logo-mobile-header.svg" width="101" height="18" alt="Логотип Cat Energy">
       </a>
     </div>
-    <nav class="main-nav">
+    <nav class="main-nav main-nav--closed">
       <button class="main-nav__toggle" type="button"><span class="visually-hidden .main-nav--closed">Открыть меню</span></button>
       <ul class="main-nav__list site-list">
         <li class="site-list__item">
@@ -39,8 +39,10 @@
           <article class="card-product">
             <a class="card-product__image-wrap" href="#"><img class="card-product__image" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
             <div class="card-product__wrapper">
-              <a href="#"><h3 class="card-product__heading">Cat Energy PRO</h3></a>
-              <span class="card-product__packaging-pro">500 г</span>
+              <a href="#">
+                <h3 class="card-product__heading">Cat Energy PRO</h3>
+                <span class="card-product__weight-pro">500 г</span>
+              </a>
               <table class="card-product__product-characteristics">
                 <tr>
                   <td class="card-product__field">Объем</td>
@@ -63,8 +65,10 @@
           <article class="card-product">
             <a class="card-product__image-wrap" href="#"><img class="card-product__image" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 1000 г"></a>
             <div class="card-product__wrapper">
-              <a href="#"><h3 class="card-product__heading">Cat Energy PRO</h3></a>
-              <span class="card-product__packaging-pro">1000 г</span>
+              <a href="#">
+                <h3 class="card-product__heading">Cat Energy PRO</h3>
+                <span class="card-product__weight-pro">1000 г</span>
+              </a>
               <table class="card-product__product-characteristics">
                 <tr>
                   <td class="card-product__field">Объем</td>
@@ -87,8 +91,10 @@
           <article class="card-product">
             <a class="card-product__image-wrap" href="#"><img class="card-product__image" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
             <div class="card-product__wrapper">
-              <a href="#"><h3 class="card-product__heading">Cat Energy PRO</h3></a>
-              <span class="card-product__packaging-pro">500 г</span>
+              <a href="#">
+                <h3 class="card-product__heading">Cat Energy PRO</h3>
+                <span class="card-product__weight-pro">500 г</span>
+              </a>
               <table class="card-product__product-characteristics">
                 <tr>
                   <td class="card-product__field">Объем</td>
@@ -111,8 +117,10 @@
           <article class="card-product">
             <a class="card-product__image-wrap" href="#"><img class="card-product__image" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
             <div class="card-product__wrapper">
-              <a href="#"><h3 class="card-product__heading">Cat Energy PRO</h3></a>
-              <span class="card-product__packaging-pro">1000 г</span>
+              <a href="#">
+                <h3 class="card-product__heading">Cat Energy PRO</h3>
+                <span class="card-product__weight-pro">1000 г</span>
+              </a>
               <table class="card-product__product-characteristics">
                 <tr>
                   <td class="card-product__field">Объем</td>
@@ -135,8 +143,10 @@
           <article class="card-product">
             <a class="card-product__image-wrap" href="#"><img class="card-product__image" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
             <div class="card-product__wrapper">
-              <a href="#"><h3 class="card-product__heading">Cat Energy SLIM</h3></a>
-              <span class="card-product__packaging-slim">500 г</span>
+              <a href="#">
+                <h3 class="card-product__heading">Cat Energy SLIM</h3>
+                <span class="card-product__weight-slim">500 г</span>
+              </a>
               <table class="card-product__product-characteristics">
                 <tr>
                   <td class="card-product__field">Объем</td>
@@ -159,8 +169,10 @@
           <article class="card-product">
             <a class="card-product__image-wrap" href="#"><img class="card-product__image" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
             <div class="card-product__wrapper">
-              <a href="#"><h3 class="card-product__heading">Cat Energy SLIM</h3></a>
-              <span class="card-product__packaging-slim">1000 г</span>
+              <a href="#">
+                <h3 class="card-product__heading">Cat Energy SLIM</h3>
+                <span class="card-product__weight-slim">1000 г</span>
+              </a>
               <table class="card-product__product-characteristics">
                 <tr>
                   <td class="card-product__field">Объем</td>
@@ -183,8 +195,10 @@
           <article class="card-product">
             <a class="card-product__image-wrap" href="#"><img class="card-product__image" src="img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г"></a>
             <div class="card-product__wrapper">
-              <a href="#"><h3 class="card-product__heading">Cat Energy SLIM</h3></a>
-              <span class="card-product__packaging-slim">500 г</span>
+              <a href="#">
+                <h3 class="card-product__heading">Cat Energy SLIM</h3>
+                <span class="card-product__weight-slim">500 г</span>
+              </a>
               <table class="card-product__product-characteristics">
                 <tr>
                   <td class="card-product__field">Объем</td>
@@ -279,8 +293,8 @@
     </div>
   </section>
 
-  <div class="page-footer__wrap">
-    <footer class="page-footer">
+  <footer class="page-footer">
+    <div class="page-footer__wrap">
       <div class="page-footer__logo-wrap">
         <img class="page-footer__logo" src="img/logo-footer.svg" width="128" height="24" alt="Логотип Cat Energy">
       </div>
@@ -301,8 +315,8 @@
       <section class="page-footer__copyright copyright">
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
       </section>
-    </footer>
-  </div>
+    </div>
+  </footer>
 
   <script src="js/script-menu-mobile.js"></script>
 
